# parrot

./: .gitignore  Cargo.toml  README.md  tarpaulin-report.html
idea/: proposal.md
parrot/: Cargo.toml
parrot-api/: Cargo.toml
parrot-api-derive/: Cargo.toml
parrot-api-derive-tests/: Cargo.toml
parrot-api-derive-tests/src/: lib.rs
parrot-api-derive-tests/tests/: actor_test.rs  message_tests.rs
parrot-api-derive/src/: actor.rs  common.rs  lib.rs  message.rs
parrot-api/src/: actor.rs  address.rs  context.rs  errors.rs  lib.rs  macros.rs  message.rs  priority.rs  runtime.rs  stream.rs  supervisor.rs  system.rs  types.rs
parrot-api/tests/: README.md  actor_config_test.rs  actor_factory_test.rs  actor_test.rs  address_test.rs  config_test.rs  context_test.rs  errors_test.rs  integration_test.rs  message_test.rs  runtime_test.rs  system_test.rs
parrot/examples/: actix_basic.rs  actix_basic_no_tokio.rs  actor_ring.rs  actor_system_usage.rs  async_message_handling.rs  dedicated_thread_example.rs  framework.rs  hello.rs  message_cloning.rs  ping_pong.rs
parrot/examples/actor/: simple.rs
parrot/src/: lib.rs  logging.rs  system.rs
parrot/src/actix/: actor.rs  address.rs  context.rs  message.rs  mod.rs  reference.rs  runtime.rs  system.rs  types.rs
parrot/src/thread/: actor.rs  address.rs  common.rs  config.rs  context.rs  envelope.rs  error.rs  message.rs  mod.rs  processor.rs  reply.rs  system.rs
parrot/src/thread/mailbox/: mod.rs  mpsc.rs  spsc.rs  spsc_ringbuf.rs
parrot/src/thread/processor/: core.rs  manager.rs  mod.rs
parrot/src/thread/scheduler/: dedicated.rs  mod.rs  queue.rs  shared.rs
parrot/src/thread/scheduler/dedicated_thread/: mod.rs  worker.rs
parrot/src/thread/scheduler/multi_thread/: mod.rs  worker.rs
parrot/src/thread/scheduler/shared/: mod.rs  pool.rs  worker.rs  worker_manager.rs
parrot/tests/: README.md  dedicated_thread_test.rs  integration_test.rs  multi_thread_scheduler_test.rs  test_actor_basics.rs  test_actor_macro.rs  test_async_message.rs  test_helpers.rs  test_sync_message.rs  test_system.rs  thread_config_test.rs  thread_error_test.rs
scripts/: run_tests.sh
