[package]
name = "parrot"
version = "0.1.0"
edition = "2024"

[dependencies]
parrot-api = { path = "../parrot-api" }

[dev-dependencies]
tokio = { workspace = true }

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "framework"
path = "examples/framework.rs"

[[example]]
name = "strategy"
path = "examples/strategy/simple.rs" 