[package]
name = "parrot"
version = "0.1.0"
edition = "2024"

[dependencies]
parrot-api = { path = "../parrot-api" }
actix = "0.13"
async-trait = "0.1"
thiserror = "2.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
num_cpus = "1.0"

[dev-dependencies]
tokio = { workspace = true }

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "framework"
path = "examples/framework.rs"

[[example]]
name = "strategy"
path = "examples/strategy/simple.rs" 

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs" 