[package]
name = "parrot"
version = "0.1.0"
edition = "2024"

[dependencies]
parrot-api = { path = "../parrot-api" }
parrot-api-derive = { path = "../parrot-api-derive" }
actix = "0.13"
async-trait = "0.1"
thiserror = "2.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
num_cpus = "1.0"
lazy_static = "1.5.0"

[dev-dependencies]
tokio = { workspace = true }


[[example]]
name = "simple"
path = "examples/actor/simple.rs" 

[[example]]
name = "ping_pong"
path = "examples/ping_pong.rs"

[[bin]]
name = "test_actor_basics"
path = "tests/test_actor_basics.rs" 

[[bin]]
name = "test_actor_macro"
path = "tests/test_actor_macro.rs"

[[bin]]
name = "test_async_message"
path = "tests/test_async_message.rs"

[[bin]]
name = "test_sync_message"
path = "tests/test_sync_message.rs"

[[bin]]
name = "test_system"
path = "tests/test_system.rs" 
